NTR - Fix wizard button alignment from master

--- a/Resources/views/administration/src/module/swag-migration/page/wizard/swag-migration-wizard/swag-migration-wizard.less
+++ b/Resources/views/administration/src/module/swag-migration/page/wizard/swag-migration-wizard/swag-migration-wizard.less
@@ -61,10 +61,6 @@
         .swag-migration-wizard__right-actions {
             text-align: right;
         }
-
-        .swag-migration-wizard__actions {
-            text-align: right;
-        }
     }
 
     .swag-migration-wizard-page-introduction,
